--- a/flexiv4only.yml
+++ b/flexiv4only.yml
@@ -1,16 +1,16 @@
 robot_cfg:
   kinematics:
-    usd_path: "home/yangfan/curobo/src/curobo/content/assets/robot/flexiv_description/flexiv_rizon4_total.usd"
+    usd_path: "home/yangfan/curobo/src/curobo/content/assets/robot/flexiv_description/flexiv_rizon4_kinematics.usd"
     usd_robot_root: "/robot"
     isaac_usd_path: ""
     usd_flip_joints: {}
     usd_flip_joint_limits: []
 
-    urdf_path: "robot/flexiv_description/flexiv_rizon4_total.urdf"
+    urdf_path: "robot/flexiv_description/flexiv_rizon4_kinematics.urdf"
     asset_root_path: "robot/flexiv_description"
     
     base_link: "base_link"
-    ee_link: "tcp"
+    ee_link: "flange"
     link_names: null
     lock_joints: null
     extra_links: null
@@ -26,11 +26,6 @@ robot_cfg:
         "link5",
         "link6",
         "link7",
-        "base_hand",
-        "left_finger_mount",
-        "left_finger_tip",
-        "right_finger_mount",
-        "right_finger_tip",
       ]      
     collision_spheres:
       base_link:
@@ -73,21 +68,6 @@ robot_cfg:
       link7:
         - "center": [0.0, 0.0, 0.03]
           "radius": 0.065
-      base_hand:
-        - "center": [-0.0, -0.0, 0.038]
-          "radius": 0.06
-      left_finger_tip:
-        - "center": [-0.0, 0.003, 0.018]
-          "radius": 0.015
-      right_finger_tip:
-        - "center": [0.0, 0.005, 0.016]
-          "radius": 0.015
-      right_finger_mount:
-        - "center": [-0.0, 0.006, -0.009]
-          "radius": 0.03
-      left_finger_mount:
-        - "center": [0.0, -0.0, -0.009]
-          "radius": 0.03
           
           
     collision_sphere_buffer: 0.005
@@ -99,13 +79,8 @@ robot_cfg:
         "link2": ["link3", "link4", "link5"],
         "link3": ["link4", "link5", "link6", "link7"],
         "link4": ["link5", "link6", "link7"],
-        "link5": ["link6", "base_hand"],
-        "link6": ["link7", "base_hand"],
-        "link7": ["base_hand"],
-        "base_hand": [ "left_finger_mount", "left_finger_tip", "right_finger_mount", "right_finger_tip"],
-        "left_finger_mount": ["left_finger_tip", "right_finger_mount", "right_finger_tip"],
-        "left_finger_tip": ["right_finger_mount", "right_finger_tip"],
-        "right_finger_mount": ["right_finger_tip"],
+        "link5": ["link6"],
+        "link6": ["link7"],
       }      
     self_collision_buffer: 
       {
@@ -117,11 +92,6 @@ robot_cfg:
         "link5": 0.0,
         "link6": 0.0,
         "link7": 0.0,
-        "base_hand": 0.0,
-        "left_finger_mount": 0.0,
-        "left_finger_tip": 0.0,
-        "right_finger_mount": 0.0,
-        "right_finger_tip": 0.0,
       }
     use_global_cumul: True
     mesh_link_names: 
@@ -134,24 +104,13 @@ robot_cfg:
         "link5",
         "link6",
         "link7",
-        "base_hand",
-        "left_outer_bar",
-        "left_inner_bar",
-        "left_finger_mount",
-        "left_finger_tip",
-        "right_outer_bar",
-        "right_inner_bar",
-        "right_finger_mount",
-        "right_finger_tip",
       ]          
     external_asset_path: null # Use this to add path for externally located assets/robot folder.
 
     cspace:
-      joint_names: ["joint1","joint2","joint3","joint4","joint5","joint6","joint7",
-      "left_outer_knuckle_joint","left_inner_knuckle_joint","left_inner_finger_joint",
-      "right_outer_knuckle_joint","right_inner_knuckle_joint","right_inner_finger_joint"] 
-      retract_config: [0.0, -0.2, 0.0, 0.57, 0.0, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
-      null_space_weight: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
-      cspace_distance_weight: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
+      joint_names: ["joint1","joint2","joint3","joint4","joint5","joint6","joint7"] 
+      retract_config: [0.0, -0.2, 0.0, 0.57, 0.0, 0.2, 0.0]
+      null_space_weight: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
+      cspace_distance_weight: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
       max_jerk: 500.0
       max_acceleration: 15.0
